force-app/main/default/objects/Producer/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <label>Insurance Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada Life</fullName>
            </value>
            <value>
                <fullName>Sun Life</fullName>
            </value>
            <value>
                <fullName>Desjardins</fullName>
            </value>
            <value>
                <fullName>Industrial Alliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>