force-app/main/default/objects/Producer/fields/Investment_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Investment_Dealer__c</fullName>
    <label>Investment Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3i Financial Investment Services Inc.</fullName>
            </value>
            <value>
                <fullName>Acadia Financial Services Inc.</fullName>
            </value>
            <value>
                <fullName>ACC Global Financial Inc.</fullName>
            </value>
            <value>
                <fullName>Acker Finley Inc.</fullName>
            </value>
            <value>
                <fullName>Acumen Capital Finance Partners Limited</fullName>
            </value>
            <value>
                <fullName>Addington Financial Corporation</fullName>
            </value>
            <value>
                <fullName>AGF Securities (Canada) Limited</fullName>
            </value>
            <value>
                <fullName>Agora Dealer Services Corp.</fullName>
            </value>
            <value>
                <fullName>Aldersley Securities Inc.</fullName>
            </value>
            <value>
                <fullName>Aligned Capital Partners Inc.</fullName>
            </value>
            <value>
                <fullName>Altimum Mutuals Inc.</fullName>
            </value>
            <value>
                <fullName>Amerity Wealth Management Inc.</fullName>
            </value>
            <value>
                <fullName>Argosy Securities Inc.</fullName>
            </value>
            <value>
                <fullName>ARTECH Asset Advisory Services Inc.</fullName>
            </value>
            <value>
                <fullName>Arton Investments, Inc.</fullName>
            </value>
            <value>
                <fullName>Assante Capital Management Ltd.</fullName>
            </value>
            <value>
                <fullName>Assante Financial Management Ltd.</fullName>
            </value>
            <value>
                <fullName>ATB Capital Markets Inc.</fullName>
            </value>
            <value>
                <fullName>ATB Securities Inc.</fullName>
            </value>
            <value>
                <fullName>AURAY Capital Canada Inc.</fullName>
            </value>
            <value>
                <fullName>B2B Bank Financial Services Inc.</fullName>
            </value>
            <value>
                <fullName>B2B Bank Securities Services Inc.</fullName>
            </value>
            <value>
                <fullName>Barclays Capital Canada Inc.</fullName>
            </value>
            <value>
                <fullName>Beacon Securities Limited</fullName>
            </value>
            <value>
                <fullName>Belay Wealth Inc.</fullName>
            </value>
            <value>
                <fullName>BFIN Securities LP</fullName>
            </value>
            <value>
                <fullName>Bloom Burton Securities Inc.</fullName>
            </value>
            <value>
                <fullName>Bloomberg Tradebook Canada Company</fullName>
            </value>
            <value>
                <fullName>BMO Investments Inc.</fullName>
            </value>
            <value>
                <fullName>BMO InvestorLine Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>