force-app/main/default/objects/Producer/fields/Other_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Other_Insurance_Company__c</fullName>
    <label>Other Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>