force-app/main/default/objects/Producer/fields/Other_Investment_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Other_Investment_Dealer__c</fullName>
    <label>Other Investment Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>